# device-config

./: .ansible-lint  .editorconfig  .gitignore  .yamlfmt.yaml  .yamllint  mise.toml  pyproject.toml
ansible/common/handlers/: global.yaml
ansible/common/inventory/: hosts
ansible/machines/container-services/: configure.yaml
ansible/machines/data-backup-server/: configure.yaml
ansible/machines/docker-services/: configure.yaml
ansible/machines/external-insight/: configure.yaml
ansible/machines/grafana-server/: configure.yaml
ansible/machines/logs-server/: configure.yaml
ansible/machines/metrics-server/: configure.yaml
ansible/machines/nas-omv/: configure.yaml
ansible/machines/nas-rp-server/: configure.yaml
ansible/machines/openbao-server/: configure.yaml
ansible/machines/openbau-server/: configure.yaml
ansible/machines/red-squadron/: configure.yaml
ansible/machines/rootn/: configure.yaml  prepare-sdcard.yaml
ansible/machines/seaweed-server/: configure.yaml
ansible/machines/tardis/: configure.yaml
ansible/machines/vault-server/: configure.yaml
ansible/machines/vector-server/: configure.yaml
kubernetes/bootstrap-utils/: red-squadron-bootstrap-root.yaml  red-squadron-talos-argocd-rendered.yaml
kubernetes/common/argocd-core/: standalone.yaml  (+1 more)
scripts/: eject_roots.sh  eject_roots2.sh  mount_roots.sh  mount_roots2.sh  mount_roots2_rw.sh  mount_roots_rw.sh  roots_get_secret.sh  sync_roots2.sh  terraform.sh  unmount_roots.sh  unmount_roots2.sh  update-talosconfig.sh  update_talosconfig.sh  vault_get_secret.sh
terraform/projects/: root.hcl
(+308 files in other folders)
